--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>这里填写.ipa文件的下载地址（例如，http://xx.com/xx.ipa）</string>
+					<string>https://github.com/shengyangyu/TabbarDisplayFix/blob/master/MyChat.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
