--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/shengyangyu/TabbarDisplayFix/blob/master/MyChat.ipa</string>
+					<string>https://github.com/shengyangyu/TabbarDisplayFix/blob/master/EFQRCode.iOS.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
